feat: update .env.example and configuration classes for enhanced settings management

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,30 @@
+# ============================================
+# Pysentimiento ML configuration
+# ============================================
+# Language for the models
+# Options: "en", "es", "it", "pt"
+PYSENTIMIENTO__LANG="es"
+# Models to load on startup
+# Options: sentiment, emotion, hate_speech, irony, ner, pos, targeted_sentiment (only for "es")
+PYSENTIMIENTO__DEFAULT_MODELS=["sentiment", "emotion", "hate_speech"]
+PYSENTIMIENTO__PREPROCESS_TWEETS=false
+
+# ============================================
+# Torch Device Configuration
+# ============================================
+# Options: "cuda", "cpu"
+DEVICE="cpu"
+
+# ============================================
+# Environment Settings
+# ============================================
+# Options: development, production
 ENVIRONMENT="development"
+
+# ============================================
+# Logging Configuration
+# ============================================
+# Logging level
+# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL="INFO"
+LOG_FORMAT="%(asctime)s - %(name)s - %(levelname)s - %(message)s"
